CV avec entete et corp contenu très null :), ça le fera prochaine foi, l'essentiel tu connais material now ;)

--- a/cvTabet/src/app/app.component.html
+++ b/cvTabet/src/app/app.component.html
@@ -1,1 +1,13 @@
+<mat-grid-list cols="3">
+  <mat-grid-tile>
+    <app-entete-du-cv></app-entete-du-cv>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <app-entete-du-cv></app-entete-du-cv>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <app-entete-du-cv></app-entete-du-cv>
+  </mat-grid-tile>
+</mat-grid-list>
 <app-stepper></app-stepper>
+
