--- a/cvTabet/src/app/app.component.html
+++ b/cvTabet/src/app/app.component.html
@@ -1,9 +1,9 @@
 <mat-grid-list cols="3">
   <mat-grid-tile>
-    <app-entete-du-cv></app-entete-du-cv>
+    <app-contact></app-contact>
   </mat-grid-tile>
   <mat-grid-tile>
-    <app-entete-du-cv></app-entete-du-cv>
+    <app-photo-card></app-photo-card>
   </mat-grid-tile>
   <mat-grid-tile>
     <app-entete-du-cv></app-entete-du-cv>
