tous les graph et sidebar

--- a/cvTabet/src/app/main-nav/main-nav.component.html
+++ b/cvTabet/src/app/main-nav/main-nav.component.html
@@ -13,8 +13,7 @@
       <a mat-list-item routerLink="/Gerer">Gérer</a>
       <a mat-list-item routerLink="/CV">CV</a>
       <a mat-list-item routerLink="/Table">Table avec filtre</a>
-      <a mat-list-item routerLink="/Default">Default</a>
-      <a mat-list-item routerLink="/Posts">Posts</a>
+      <a mat-list-item routerLink="/">Default</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -59,3 +58,4 @@
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
