--- a/cvTabet/src/app/layouts/default/default.component.html
+++ b/cvTabet/src/app/layouts/default/default.component.html
@@ -1,13 +1,12 @@
-<app-header>header</app-header>
-<p>default worsks</p>
+<app-header (toggleSideBarForMe)="sideBarToggler($event)"></app-header>
 
 <mat-drawer-container>
-  <mat-drawer>
+  <mat-drawer mode="side" [opened]="sideBarOpen">
     <app-sidebar></app-sidebar>
   </mat-drawer>
   <mat-drawer-content>
-
     <router-outlet></router-outlet>
   </mat-drawer-content>
 </mat-drawer-container>
-<app-footer>footer</app-footer>
+
+<app-footer></app-footer>
