--- a/cvTabet/src/app/sahred/component/sidebar/sidebar.component.html
+++ b/cvTabet/src/app/sahred/component/sidebar/sidebar.component.html
@@ -1,32 +1,32 @@
-<mat-nav-list>
-  <div class="profile-card">
-    <div class="header">
-      <h2>TABET Djalal</h2>
-      <h4>b_tabet@esi.dz</h4>
-    </div>
-    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Soufiane FADIL">
-  </div>
+<!--<mat-nav-list>-->
+<!--  <div class="profile-card">-->
+<!--    <div class="header">-->
+<!--      <h2>TABET Djalal</h2>-->
+<!--      <h4>b_tabet@esi.dz</h4>-->
+<!--    </div>-->
+<!--    <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Soufiane FADIL">-->
+<!--  </div>-->
 
-  <mat-divider></mat-divider>
+<!--  <mat-divider></mat-divider>-->
 
-  <h2 matSubheader>Pages</h2>
+<!--  <h2 matSubheader>Pages</h2>-->
 
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dashboard</a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/Posts">Posts</a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/Articles">Articles</a>
+<!--  <a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dashboard</a>-->
+<!--  <a mat-list-item routerLinkActive="list-item-active" routerLink="/Posts">Posts</a>-->
+<!--  <a mat-list-item routerLinkActive="list-item-active" routerLink="/Articles">Articles</a>-->
 
-  <mat-divider></mat-divider>
+<!--  <mat-divider></mat-divider>-->
 
-  <h2 matSubheader>Tools</h2>
+<!--  <h2 matSubheader>Tools</h2>-->
 
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
-    <mat-icon>import_contacts</mat-icon>
-    Contacts
-  </a>
+<!--  <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">-->
+<!--    <mat-icon>import_contacts</mat-icon>-->
+<!--    Contacts-->
+<!--  </a>-->
 
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
-    <mat-icon>contact_phone</mat-icon>
-    Leads
-  </a>
+<!--  <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">-->
+<!--    <mat-icon>contact_phone</mat-icon>-->
+<!--    Leads-->
+<!--  </a>-->
 
-</mat-nav-list>
+<!--</mat-nav-list>-->
